# halo-app

./: .gitattributes  .gitignore  README.md
android/: gradle.properties  key  pom.xml  settings.gradle.kts
android/app/: .gitignore  build.gradle.kts
api/: Hona.sln  README.md
api/Hona.Api/: Hona.Api.csproj  Program.cs  Startup.cs  hona.desktop.json  hona.json
api/Hona.Business/: Hona.Business.csproj
api/Hona.Model/: Hona.Model.csproj
api/Hona.Plugin/: Hona.Plugin.csproj
api/Hona.Test/: Hona.Test.csproj
app/: README.md  pubspec.yaml
app/lib/: browser.dart  main.dart
app/test/: widget_test.dart
cicd/: README.md  cd.sh  ci.sh  cicd.sh  pub.sh  windows.bat
cicd/api/: Dockerfile  docker-compose.yml  kubernetes.yaml
cicd/centos/: cd.sh  ci.sh
cicd/mobile/: Dockerfile  kubernetes.yaml  windows.bat
cicd/pc/: Dockerfile  (+2 more)
desktop/: .editorconfig  README.md  index.html  package.json  vite.config.ts
desktop/src-tauri/: .taurignore  Cargo.toml  settings.json  tauri.conf.desktop.json  tauri.conf.json  tauri.conf.personal.json
desktop/src-tauri/config/: fragment.wxs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: api_process.rs  main.rs  settings.rs
files/: Hona.jmx  Hona.pdm  Logo.psd  handle_conflict.sh  控件导入测试.xlsx
harmony/: .gitignore
ios/: README.md  ios.sln
mobile/: .editorconfig  README.md  env.d.ts  index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
pc/: README.md  env.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
weixin/: project.config.json  project.private.config.json
(+366 files in other folders)
